apps/gustavo/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: gustavo
    backstage.io/kubernetes-id: gustavo
  name: gustavo
spec:
  finalizers:
  - kubernetes
