apps/gustavo/base/virtual-service.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gustavo
  namespace: gustavo
  labels:
    backstage.io/kubernetes-id: gustavo
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - gustavo.diegoluisi.eti.br
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: gustavo
        port:
          number: 8080
